k8s-manifests/app/backend-small-load.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    purpose: small-load
  name: backend-small-load
spec:
  containers:
    - image: busybox
      name: busybox
      command:
        - sh
        - -c
        - while true; do wget -q -O- http://app-backend:8000/info; sleep 5; done
      resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
