k8s-manifests/app/frontend-small-load.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    purpose: small-load
  name: frontend-small-load
spec:
  containers:
    - image: busybox
      name: busybox
      command:
        - sh
        - -c
        - while true; do wget -Sq -O- http://app-frontend/about; sleep 5; done
      resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
