k8s-manifests/app/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-backend
  labels:
    app: app-backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app-backend  # for ReplicaSet to know which pods to manage
  template:
    metadata:
      labels:
        app: app-backend
    spec:
      containers:
        - name: backend
          resources:
            # requests are taken from 'kubectl top pods -n=dev' and rounded up
            # requests are equal to limits
            limits:
              cpu: 500m
              memory: 200Mi
          image: app-backend:1.0.0
          ports:
            - name: web
              containerPort: 8000
          startupProbe:
            httpGet:
              path: /info
              port: web
            failureThreshold: 30
            periodSeconds: 2
          livenessProbe:
            httpGet:
              path: /info
              port: web
            failureThreshold: 1  # consider dead after first failure
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: app-backend
  labels:
    app: app-backend
spec:
  selector:
    app: app-backend
  ports:
    - name: web
      protocol: TCP
      port: 80
      targetPort: web  # see exposed port in container
