k8s-manifests/app/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-frontend
  labels:
    app: app-frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app-frontend  # for ReplicaSet to know which pods to manage
  template:
    metadata:
      labels:
        app: app-frontend
    spec:
      containers:
        - name: frontend
          resources:
            # requests are taken from 'kubectl top pods -n=dev' and rounded up
            # requests are equal to limits
            limits:
              # equal to requests
              cpu: 100m
              memory: 100Mi
          image: app-frontend-vue:1.0.0
          ports:
            - name: frontend
              containerPort: 8000
          startupProbe:
            httpGet:
              path: /
              port: frontend
            failureThreshold: 30
            periodSeconds: 2
          livenessProbe:
            httpGet:
              path: /
              port: frontend
            failureThreshold: 1  # consider dead after first failure
            periodSeconds: 10
        - name: nginx-prometheus-exporter
          image: nginx/nginx-prometheus-exporter:1.5.1
          ports:
            - name: metrics
              containerPort: 9113
          args:
            - --nginx.scrape-uri=http://127.0.0.1:8000/stub_status
---
apiVersion: v1
kind: Service
metadata:
  name: app-frontend
  labels:
    app: app-frontend
spec:
  selector:
    app: app-frontend
  ports:
    - name: frontend
      protocol: TCP
      port: 80
      targetPort: frontend  # see exposed port in container
    - name: metrics
      protocol: TCP
      port: 9113
      targetPort: metrics  # see exposed port in container
